crates/secretenv-core/tests/value_access_ui/backend_not_re_exported.stderr
error[E0405]: cannot find trait `Backend` in crate `secretenv_core`
 --> tests/value_access_ui/backend_not_re_exported.rs:9:42
  |
9 |     fn _wants_backend<T: secretenv_core::Backend>() {}
  |                                          ^^^^^^^ not found in `secretenv_core`
  |
note: found an item that was configured out
 --> src/lib.rs
  |
  | #[cfg(feature = "value-access")]
  |       ------------------------ the item is gated behind the `value-access` feature
  | pub use backend::Backend;
  |                  ^^^^^^^
